# AIR-5021-2026--Team13-FinalProject

./: README.md
src/cap/: Cap.ipynb  LMP_Examples.ipynb
src/tic_tac_toe/: CMakeLists.txt  package.xml
src/tic_tac_toe/config/: calibration_data.yaml  game_config.yaml
src/tic_tac_toe/launch/: calibrate_grid.launch  camera_capture_test.launch  tic_tac_toe_game.launch  tic_tac_toe_sim.launch
src/tic_tac_toe/scripts/: calibrate_grid.py  camera_capture.py  tic_tac_toe_control.py  tic_tac_toe_logic.py  tic_tac_toe_main.py  tic_tac_toe_vision.py
